# ckanext-secure_logout

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/secure_logout/: flask_session_config.py  plugin.py
ckanext/secure_logout/assets/: script.js  webassets.yml
ckanext/secure_logout/tests/: test_plugin.py
